# compute-pcrs

./: justfile
.github/workflows/: rust.yml  tests.yml
cli/: Cargo.toml
lib/: Cargo.toml
lib/src/: esp.rs  lib.rs  mok.rs  pcrs.rs  rootfs.rs  tpmevents.rs  uefi.rs
lib/src/pcrs/: tests.rs
lib/src/tpmevents/: combine.rs  compute.rs  tests.rs  tree.rs
lib/src/tpmevents/combine/: tests.rs
lib/src/tpmevents/tree/: tests.rs
lib/src/uefi/: efivars.rs
test-fixtures/azure/20251013/fedora-42.20250929.3.0/: all-pcrs.json  pcr4.json  pcr7-sb-enabled.json
test-fixtures/qemu-ovmf/fedora-42/fedora-42.20250929.3.0/: all-pcrs.json  pcr7-sb-enabled.json
test-fixtures/qemu-ovmf/fedora-42/fedora-44.20260111.91.1/: all-pcrs.json  pcr14.json  pcr4.json  pcr7-sb-enabled.json
test-fixtures/qemu-ovmf/fedora-42/rhel-9.6.20250523-0/: all-pcrs.json  pcr14.json  pcr4.json  pcr7-sb-disabled.json  pcr7-sb-enabled.json
