# SPDX-FileCopyrightText: Timothée Ravier <tim@siosm.fr>
# SPDX-FileCopyrightText: Beñat Gartzia Arruabarrena <bgartzia@redhat.com>
#
# SPDX-License-Identifier: CC0-1.0

[package]
description = "compute-pcrs command line interface"
name = "compute-pcrs"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/trusted-execution-clusters/compute-pcrs"
rust-version = "1.88.0"
default-run = "compute-pcrs"

[dependencies]
compute-pcrs-lib = { version = "*", path = "../lib" }
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
