# SPDX-FileCopyrightText: Timothée Ravier <tim@siosm.fr>
# SPDX-FileCopyrightText: Beñat Gartzia Arruabarrena <bgartzia@redhat.com>
#
# SPDX-License-Identifier: CC0-1.0

[package]
description = "compute-pcrs library"
name = "compute-pcrs-lib"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/trusted-execution-clusters/compute-pcrs"
rust-version = "1.88.0"

[dependencies]
lief = "0.17.3"
anyhow = "1.0.100"
hex = "0.4.3"
hex-literal = "1.1.0"
sha2 = "0.10.9"
serde = { version = "1.0.228", features = ["derive"] }
uuid = "1.20.0"
openssl = "0.10.75"
glob = "0.3.3"
serde_with = { version = "3.16.1", features = ["hex"] }
strum = { version = "0.27.2", features = ["derive"] }
itertools = "0.14.0"
log = "0.4.28"

[dev-dependencies]
serde_json = "1.0.149"
testing_logger = "0.1.1"
